   - ofaMysqlEditorEnter: migrate to GResource (todo #826).
   - ofaMysqlMeta: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPeriod: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPrefsBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaMysqlPrefsBin: migrate to GResource (todo #826).
   - ofaPage: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPReferences: move user interface to GResource (todo #826).
   - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
   - ofoAccount: migrate to G_ADD_PRIVATE (todo #994).
   - ofoAccount: return if dispose_has_run fails (todo #995).
   - ofoBase: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: rename ofo_bat_get|set_begin|end methods (todo #996).
   - ofoBatLine: migrate to G_ADD_PRIVATE (todo #994).
   - ofoClass: migrate to G_ADD_PRIVATE (todo #994).
   - ofoConcil: migrate to G_ADD_PRIVATE (todo #994).
   - ofoCurrency: migrate to G_ADD_PRIVATE (todo #994).
   - ofoCurrency: migrate to ofaBox-managed data.
   - ofoDossier: migrate to G_ADD_PRIVATE (todo #994).
   - ofoDossier: migrate to ofaBox-managed data.
   - ofoEntry: migrate to G_ADD_PRIVATE (todo #994).
   - ofoLedger: migrate to G_ADD_PRIVATE (todo #994).
   - ofoOpeTemplate: migrate to G_ADD_PRIVATE (todo #994).
   - ofoRate: migrate to G_ADD_PRIVATE (todo #994).
   - of_currency_add_currency(): now wants the digits count of the currency.

-----------------------------------------------------------------------
 Version 0.48
 ============

 Released on 2016-02-14

 New features and improvements:

   - ofaAccountFrameBin: scroll the treeview up to the preselected account (todo #988).
   - ofaAccountProperties: display an error message + run non modal (todo #984).
   - ofaBatPage: now dynamically auto-updates on conciliations (todo #979).
   - ofaBatPage: select newly imported BAT file (todo #993).
   - ofaBatSelect: display unused count (todo #990) .