@@ -7,6 +7,7 @@
     <file>ofa-ope-template-help.ui</file>
     <file>ofa-ope-template-properties.ui</file>
     <file>ofa-reconcil-page.ui</file>
+    <file>ofa-render-page.ui</file>
     <file>light-empty-14.png</file>
     <file>light-green-14.png</file>
     <file>light-yellow-14.png</file>
